[Jira] Update to latest OpenAPI spec